--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -179,38 +179,14 @@
     <Compile Include="..\Vts.Test\Modeling\ValidateInverseSolution.cs">
       <Link>Modeling\ValidateInverseSolution.cs</Link>
     </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\BidirectionalScattering\AnalogBidirectionalTallyActionsTests.cs">
-      <Link>MonteCarlo\BidirectionalScattering\AnalogBidirectionalTallyActionsTests.cs</Link>
-    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\BidirectionalScattering\BidirectionalAnalyticSolutions.cs">
       <Link>MonteCarlo\BidirectionalScattering\BidirectionalAnalyticSolutions.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\DataStructuresValidation\DetectorInputs\dMCdROfRhodMuaDetectorInputValidationTests.cs">
-      <Link>MonteCarlo\DataStructuresValidation\DetectorInputs\dMCdROfRhodMuaDetectorInputValidationTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\DataStructuresValidation\DetectorInputs\dMCdROfRhodMusDetectorInputValidationTests.cs">
-      <Link>MonteCarlo\DataStructuresValidation\DetectorInputs\dMCdROfRhodMusDetectorInputValidationTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\DataStructuresValidation\SimulationInputValidationTests.cs">
-      <Link>MonteCarlo\DataStructuresValidation\SimulationInputValidationTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\DataStructuresValidation\TissueInputs\MultiLayerTissueInputValidationTests.cs">
       <Link>MonteCarlo\DataStructuresValidation\TissueInputs\MultiLayerTissueInputValidationTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\DataStructuresValidation\TissueInputs\SingleEllipsoidTissueInputValidationTests.cs">
       <Link>MonteCarlo\DataStructuresValidation\TissueInputs\SingleEllipsoidTissueInputValidationTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\DetectorInputs\DetectorInputTests.cs">
-      <Link>MonteCarlo\DataStructures\DetectorInputs\DetectorInputTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\DetectorInputs\pMCDetectorInputTests.cs">
-      <Link>MonteCarlo\DataStructures\DetectorInputs\pMCDetectorInputTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\OutputTests.cs">
-      <Link>MonteCarlo\DataStructures\OutputTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\SimulationInputExtensionsTests.cs">
-      <Link>MonteCarlo\DataStructures\SimulationInputExtensionsTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\SimulationInputTests.cs">
       <Link>MonteCarlo\DataStructures\SimulationInputTests.cs</Link>
@@ -230,41 +206,11 @@
     <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\TissueInputs\SingleEllipsoidTissueInputTests.cs">
       <Link>MonteCarlo\DataStructures\TissueInputs\SingleEllipsoidTissueInputTests.cs</Link>
     </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\AnalogOneLayerDetectorsTests.cs">
-      <Link>MonteCarlo\Detectors\AnalogOneLayerDetectorsTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\CAWLayersDetectorsTests.cs">
-      <Link>MonteCarlo\Detectors\CAWLayersDetectorsTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DAWLayersDetectorsTests.cs">
-      <Link>MonteCarlo\Detectors\DAWLayersDetectorsTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DAWSphereDetectorsTests.cs">
-      <Link>MonteCarlo\Detectors\DAWSphereDetectorsTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\pMCCAWLayersDetectorsTests.cs">
-      <Link>MonteCarlo\Detectors\pMCCAWLayersDetectorsTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\pMCCAWOneLayerDetectorsTests.cs">
-      <Link>MonteCarlo\Detectors\pMCCAWOneLayerDetectorsTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\pMCDAWLayersDetectorsTests.cs">
-      <Link>MonteCarlo\Detectors\pMCDAWLayersDetectorsTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\pMCDAWOneLayerDetectorsTests.cs">
-      <Link>MonteCarlo\Detectors\pMCDAWOneLayerDetectorsTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\SpecularLayerDetectorTests.cs">
-      <Link>MonteCarlo\Detectors\SpecularLayerDetectorTests.cs</Link>
-    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Factories\DetectorProviderTests.cs">
       <Link>MonteCarlo\Factories\DetectorProviderTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Helpers\SourceToolboxTests.cs">
       <Link>MonteCarlo\Helpers\SourceToolboxTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\IO\DetectorIOTests.cs">
-      <Link>MonteCarlo\IO\DetectorIOTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\MonteCarloSimulationTests.cs">
       <Link>MonteCarlo\MonteCarloSimulationTests.cs</Link>
@@ -277,9 +223,6 @@
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\PhotonData\pMCDatabaseTests.cs">
       <Link>MonteCarlo\PhotonData\pMCDatabaseTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\PostProcessing\PhotonDatabasePostProcessorTests.cs">
-      <Link>MonteCarlo\PostProcessing\PhotonDatabasePostProcessorTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Rng\SerializableMersenneTwisterTests.cs">
       <Link>MonteCarlo\Rng\SerializableMersenneTwisterTests.cs</Link>
@@ -294,6 +237,7 @@
       <Link>MonteCarlo\Sources\SurfaceEmittingFlatSourcesTests.cs</Link>
     </Compile>
     <Compile Include="FileIOTests.Desktop.cs" />
+    <Compile Include="MonteCarlo\Detectors\DAWLayersDetectorsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -304,6 +248,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Modeling\Optimizers\" />
+    <Folder Include="MonteCarlo\DataStructuresValidation\DetectorInputs\" />
+    <Folder Include="MonteCarlo\DataStructures\DetectorInputs\" />
+    <Folder Include="MonteCarlo\IO\" />
+    <Folder Include="MonteCarlo\PostProcessing\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
