MC: Added in RDiffuse, R(angle), R(rho,angle), R(rho,omega), R(rho,time) R(x,y). Have questions about BinaryArraySerializer for 1D and Complex tallies to ask DC.
--HG--
branch : dc-120226-extensibility_improvements

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -237,6 +237,7 @@
       <Link>MonteCarlo\Sources\SurfaceEmittingFlatSourcesTests.cs</Link>
     </Compile>
     <Compile Include="FileIOTests.Desktop.cs" />
+    <Compile Include="MonteCarlo\Detectors\CAWLayersDetectorsTests.cs" />
     <Compile Include="MonteCarlo\Detectors\DAWLayersDetectorsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
