--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -240,6 +240,11 @@
     <Compile Include="MonteCarlo\Detectors\AnalogOneLayerDetectorsTests.cs" />
     <Compile Include="MonteCarlo\Detectors\CAWLayersDetectorsTests.cs" />
     <Compile Include="MonteCarlo\Detectors\DAWLayersDetectorsTests.cs" />
+    <Compile Include="MonteCarlo\Detectors\pMCCAWLayersDetectorsTests.cs" />
+    <Compile Include="MonteCarlo\Detectors\pMCCAWOneLayerDetectorsTests.cs" />
+    <Compile Include="MonteCarlo\Detectors\pMCDAWLayersDetectorsTests.cs" />
+    <Compile Include="MonteCarlo\Detectors\pMCDAWOneLayerDetectorsTests.cs" />
+    <Compile Include="MonteCarlo\Detectors\SpecularLayerDetectorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
