MC: finished updating all detectors and all unit tests.  All passing!  Only concerns: ROfFx, ROfFxAndTime and pMC versions of these detectors have no unit tests so not sure they are bugless.
--HG--
branch : dc-120226-extensibility_improvements

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -240,6 +240,7 @@
     <Compile Include="MonteCarlo\Detectors\AnalogOneLayerDetectorsTests.cs" />
     <Compile Include="MonteCarlo\Detectors\CAWLayersDetectorsTests.cs" />
     <Compile Include="MonteCarlo\Detectors\DAWLayersDetectorsTests.cs" />
+    <Compile Include="MonteCarlo\Detectors\DAWSphereDetectorsTests.cs" />
     <Compile Include="MonteCarlo\Detectors\pMCCAWLayersDetectorsTests.cs" />
     <Compile Include="MonteCarlo\Detectors\pMCCAWOneLayerDetectorsTests.cs" />
     <Compile Include="MonteCarlo\Detectors\pMCDAWLayersDetectorsTests.cs" />
