--- a/src/Vts.Gui.Silverlight/Vts.Gui.Silverlight.csproj
+++ b/src/Vts.Gui.Silverlight/Vts.Gui.Silverlight.csproj
@@ -341,40 +341,6 @@
     </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\matlab.xsd">
-      <Link>Resources\Matlab\xml_toolbox\matlab.xsd</Link>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\strsplit.p">
-      <Link>Resources\Matlab\xml_toolbox\strsplit.p</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\unblank.p">
-      <Link>Resources\Matlab\xml_toolbox\unblank.p</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_format.p">
-      <Link>Resources\Matlab\xml_toolbox\xml_format.p</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_formatany.p">
-      <Link>Resources\Matlab\xml_toolbox\xml_formatany.p</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_help.p">
-      <Link>Resources\Matlab\xml_toolbox\xml_help.p</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_load.p">
-      <Link>Resources\Matlab\xml_toolbox\xml_load.p</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_parse.p">
-      <Link>Resources\Matlab\xml_toolbox\xml_parse.p</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_parseany.p">
-      <Link>Resources\Matlab\xml_toolbox\xml_parseany.p</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_save.p">
-      <Link>Resources\Matlab\xml_toolbox\xml_save.p</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_toolbox.pdf">
-      <Link>Resources\Matlab\xml_toolbox\xml_toolbox.pdf</Link>
-    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\AppManifest.xml" />
   </ItemGroup>
@@ -550,44 +516,41 @@
     <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\readBinaryData.m">
       <Link>Resources\Matlab\readBinaryData.m</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\INSTALL.TXT">
-      <Link>Resources\Matlab\xml_toolbox\INSTALL.TXT</Link>
+    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\jsonlab\AUTHORS.txt">
+      <Link>Resources\Matlab\jsonlab\AUTHORS.txt</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\LICENSE.TXT">
-      <Link>Resources\Matlab\xml_toolbox\LICENSE.TXT</Link>
+    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\jsonlab\ChangeLog.txt">
+      <Link>Resources\Matlab\jsonlab\ChangeLog.txt</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\strsplit.m">
-      <Link>Resources\Matlab\xml_toolbox\strsplit.m</Link>
+    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\jsonlab\jsonopt.m">
+      <Link>Resources\Matlab\jsonlab\jsonopt.m</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\tests\xml_tests.m">
-      <Link>Resources\Matlab\xml_toolbox\tests\xml_tests.m</Link>
+    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\jsonlab\license.txt">
+      <Link>Resources\Matlab\jsonlab\license.txt</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\unblank.m">
-      <Link>Resources\Matlab\xml_toolbox\unblank.m</Link>
+    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\jsonlab\LICENSE_BSD.txt">
+      <Link>Resources\Matlab\jsonlab\LICENSE_BSD.txt</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_format.m">
-      <Link>Resources\Matlab\xml_toolbox\xml_format.m</Link>
+    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\jsonlab\loadjson.m">
+      <Link>Resources\Matlab\jsonlab\loadjson.m</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_formatany.m">
-      <Link>Resources\Matlab\xml_toolbox\xml_formatany.m</Link>
+    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\jsonlab\loadubjson.m">
+      <Link>Resources\Matlab\jsonlab\loadubjson.m</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_help.m">
-      <Link>Resources\Matlab\xml_toolbox\xml_help.m</Link>
+    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\jsonlab\mergestruct.m">
+      <Link>Resources\Matlab\jsonlab\mergestruct.m</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_load.m">
-      <Link>Resources\Matlab\xml_toolbox\xml_load.m</Link>
+    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\jsonlab\README.txt">
+      <Link>Resources\Matlab\jsonlab\README.txt</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_parse.m">
-      <Link>Resources\Matlab\xml_toolbox\xml_parse.m</Link>
+    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\jsonlab\savejson.m">
+      <Link>Resources\Matlab\jsonlab\savejson.m</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_parseany.m">
-      <Link>Resources\Matlab\xml_toolbox\xml_parseany.m</Link>
+    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\jsonlab\saveubjson.m">
+      <Link>Resources\Matlab\jsonlab\saveubjson.m</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_save.m">
-      <Link>Resources\Matlab\xml_toolbox\xml_save.m</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\xml_toolbox\xml_toolbox-version.txt">
-      <Link>Resources\Matlab\xml_toolbox\xml_toolbox-version.txt</Link>
+    <EmbeddedResource Include="..\..\matlab\post_processing\monte_carlo\simulation_result_loading\jsonlab\varargin2struct.m">
+      <Link>Resources\Matlab\jsonlab\varargin2struct.m</Link>
     </EmbeddedResource>
     <Content Include="Helpers\fjcore\FJCore.csproj" />
     <Content Include="Helpers\fjcore\FJCoreWin.csproj" />
