Various fixes including fixing references to get unit tests passing and Matlab loading results. Remaining 2 Vts.Desktop tests failing:
Vts.Test.Modeling.InverseSolutionTests.VerifyROfRhoMonteCarloMeasuredNoNoiseSDAModel
Vts.Test.IO.FileIOTests.validate_copy_file_from_resources

--HG--
branch : dc-120226-extensibility_improvements

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -279,6 +279,15 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="..\Vts.Test\Resources\embeddedresourcefile.txt">
+      <Link>Resources\embeddedresourcefile.txt</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\Vts.Test\Resources\folder\embeddedresourcefile.txt">
+      <Link>Resources\folder\embeddedresourcefile.txt</Link>
+    </EmbeddedResource>
+    <Resource Include="..\Vts.Test\Resources\resourcefile.txt">
+      <Link>Resources\resourcefile.txt</Link>
+    </Resource>
     <Content Include="App_Readme\MathNet.Numerics.authors.txt" />
     <Content Include="App_Readme\MathNet.Numerics.copyright.txt" />
     <Content Include="App_Readme\MathNet.Numerics.readme.txt" />
